Fixed spacing issues caused by mixing bootstrap and CSS on expire-and-search class

--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -1,5 +1,9 @@
 .expire-and-search {
-vertical-align: middle;}
+  display: flex;
+  justify-content:space-between;
+  align-items: center;
+}
+
 
 .search-bar {
   margin-right: 5px;
